updated at: 2023-04-25 21:42, ラバーカップ/toilet plunger - Fabricatorium Mogura - BOOTH

--- a/VRChat/39/1313939.html
+++ b/VRChat/39/1313939.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "f6MlY+HNDREf3/IdfLxhtRuiLyPFWx84Ry4fNCoQ9UU="></script>
+    "qS2KbqCU8FL13MA9h57z0nat7MBFJC7iLXAJGse2oxk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ラバーカップ/toilet plunger","description":"ラバーカップ 1500くらいポリゴン\n内蔵\n.fbx/prefab/diffuse/normal/gloss/matcap/specular\nmatcap made and copyrighted by Yueou(https://yueou.booth.pm/)\n二次配布、自作発言、商用利用はお止めください\n改変自由 R18/G使用可能\nvrchat使用限\n不明な点や質問などありましたらこちらに連絡ください\nI PRESERVE AUTHOURITY.（According to Copyright Law of the People's Republic of China）","url":"https://booth.pm/ja/items/1313939","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/753c946e-b3d0-4d99-ad93-71a37cc147a2/i/1313939/55c92ae3-fc7d-4fc4-8f37-fb54de6df761_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="f6MlY+HNDREf3/IdfLxhtRuiLyPFWx84Ry4fNCoQ9UU="></script>
+    nonce="qS2KbqCU8FL13MA9h57z0nat7MBFJC7iLXAJGse2oxk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1313939/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1313939/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
