--- a/VRChat/79/1313179.html
+++ b/VRChat/79/1313179.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0pqDIkaz7apdl7bHtBAoXWMryDa28KEGfrX5vsYPJSM="></script>
+    "72ztVummSfLk/wxPF5Cewj8c8ttYlBqwCD0qqSMOofc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Raphtalia 3D model","description":"3D fanart of Raphtalia from Rising of The Shield Hero anime.\n\n● Contents\n\n01. FBX File Data.\n02. Texture File.\n03. UnityPackage Data Humanoid Setup.\n\n● About Commercial Use\n\n* This model can be used for Animation/Video/Vrchat/Images. \n\n** you are free to use this model for any commercial game project but please inform me if you use it for commercial purpose and you can just put my name in you credits I'll be appreciate it so much for it.\n\n● End of User Term\nPlease don't re-distribute this model in public\n\nFB : https://www.facebook.com/ariyasus/\nTwitter : https://twitter.com/AriyaSusanto\nPIXIV : https://www.pixiv.net/member.php?id=11891411","url":"https://booth.pm/ja/items/1313179","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/97ecec62-2bc3-4f6a-98ac-e7c987589c8d/i/1313179/de3db297-1643-4aee-a4c5-bafdcb0ae404_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0pqDIkaz7apdl7bHtBAoXWMryDa28KEGfrX5vsYPJSM="></script>
+    nonce="72ztVummSfLk/wxPF5Cewj8c8ttYlBqwCD0qqSMOofc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1313179/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1313179/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
