--- a/VRChat/67/1313167.html
+++ b/VRChat/67/1313167.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "H0qBXAdlksyU0St9WfMFENq94dbXB8zw8KrMRXUai7E="></script>
+    "N4hBFm9DB0KWP9J71V4vovabF13YXB9Xqo9O/2Cb9U0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボディピアス　15種類","description":"それっぽいボディピアスです。\nトンネル(011.fbx)は輪っかにボーンが入ってるのでDynamicBoneで揺らせます。\nシェイプキーで長さや幅が変えられるものもあります。\n\nスクランパー(牙が生えているように見えるピアス)は、アバターのHeadボーンにピアスを入れればなんとなくできるとは思いますが、アバターによっては(口の開け方が大きいなど)blenderでの調整やunityでのanimation変更が必要になる可能性があります。ご注意ください。\n\n※ピアス以外(アバター等)は付属しません。\n\nユニティちゃんトゥーンシェーダー(UTS)2.0.7を使用しています。\n当商品をunityへインポートする前にUTSを先にインポートしてください。\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n何かあればTwitter：@enu_001まで。\nTwitterやVRC内で見せてもらえたら嬉しいです。","url":"https://booth.pm/ja/items/1313167","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1313167/cdcc0e94-a62b-41c8-bad4-6d81c85fb276_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H0qBXAdlksyU0St9WfMFENq94dbXB8zw8KrMRXUai7E="></script>
+    nonce="N4hBFm9DB0KWP9J71V4vovabF13YXB9Xqo9O/2Cb9U0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1313167/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              463
+                              464
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1313167/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              463
+                              464
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
