--- a/VRChat/25/1089025.html
+++ b/VRChat/25/1089025.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Rcj/2Twus9MKItk8neb/wWrR+L+FEC2Atmi5rgh4tZI="></script>
+    "xaZhivEVk1ISDf9dMQnhhwTvP0P/AugajNWYLYmGcuY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】りょうさん型ケイロカミオカ【pmx/FBX/VRM】","description":"りょうさん型ケイロカミオカ\n\nケイロカミオカのりょうさん型モデルです。\n写真の１７人版は添付してません。\n\nVRChatで貴方だけのケイロカミオカやケイロカミオカモデルをご利用ください。\nケイロカミオカの可能性は無限大です。\n\n完成した改変ケイロカミオカのスクリーンショットをtwitterで\n#ケイロカミオカ大図鑑\nでツイートしたら私が大変よろこびます。\n\n本モデルデータの権利はケイロカミオカ、及び、たんぽこが有します。\n権利関係の管理はケイロカミオカに委任されてますのでご質問のある方はご連絡下さい。\n\n尚、何らかのプラットフォームにアップロードする際は\n各種プラットフォームの利用規約の範囲内にてご利用下さい。\n\nKeiroKamiokaModels.zip -\u003e VRChat対応モデル\nりょうさん型ケイロカミオカMMD.zip -\u003e MMDモデル\nKeiroModel-BeatSaber.zip -\u003e ビートセイバーMOD用のアバターファイル\nMineKeiroR.png -\u003e マインクラフト用ケイロカミオカテクスチャ\n\n2019/10/27 Windows用Minecraft用のケイロカミオカテクスチャを追加\n2019/6/21 ビートセイバー対応モデル追加\n2019/6/11 MMD対応モデル追加\n2019/5/27 ウェイト修正","url":"https://booth.pm/ja/items/1089025","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a3299d88-aa19-4527-bf6a-19ffa64fbaf0/i/1089025/cd8da53a-5e25-4e02-b0ec-61c8402fc926_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Rcj/2Twus9MKItk8neb/wWrR+L+FEC2Atmi5rgh4tZI="></script>
+    nonce="xaZhivEVk1ISDf9dMQnhhwTvP0P/AugajNWYLYmGcuY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1089025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               140
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1089025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               140
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
