updated at: 2023-04-25 21:44, れっさーもくりまんじゅう - #Cheap_Shop - BOOTH

--- a/VRChat/60/1312860.html
+++ b/VRChat/60/1312860.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GEClTBgUGJA6jrz6LjKsOXkVkxHQuFXnUtSkdRdcnl4="></script>
+    "hl2AsrXwAnB54bmCcdW6L5HBfOt639u/iZxt/1V6fxE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"れっさーもくりまんじゅう","description":"レッサーモクリのおまんじゅうです。(△4436)\n\npsdデータも同梱しているので、カラーリングを変更して自分だけのもくりまんじゅうにして使うことができます。\n\n株式会社HIKKY様のキャラクター「レッサーモクリ」の二次創作グッズです。\n使用時のガイドラインはレッサーモクリ公式サイト「MADE BY MOKURI」内の「モクリプロジェクトキャラクター利用規約」と、下の【使用規約】に準じます。\n\n【内容物】\n・mokuri.fbx\n・mokuri.png\n・mokuri.psd\n・mokuri_bun.unitypackage","url":"https://booth.pm/ja/items/1312860","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/740fc37b-7996-42b7-93bb-9fb07e71227a/i/1312860/f305a8c2-e866-44c1-a79f-ee342fe976d3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GEClTBgUGJA6jrz6LjKsOXkVkxHQuFXnUtSkdRdcnl4="></script>
+    nonce="hl2AsrXwAnB54bmCcdW6L5HBfOt639u/iZxt/1V6fxE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1312860/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               199
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1312860/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               199
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
