--- a/VRChat/60/1312660.html
+++ b/VRChat/60/1312660.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U10LzXTmi54ltt8lmBNzrT0ZrANFSlR2IpY8ztsvanY="></script>
+    "ntNl+sFPzYSG0uOPusOYx76VRBugX3S1iCjDHS96FDs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ふがし横丁】ブラックホールみたいな色の瞳テクスチャ","description":"【ふがし横丁】ブラックホールみたいな色の瞳テクスチャ\n制作：ふがふがし","url":"https://booth.pm/ja/items/1312660","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e0aa0d58-e4fd-4164-b802-138d2b57c3e0/i/1312660/cd15eecb-5775-43c4-a535-d504e048790c_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U10LzXTmi54ltt8lmBNzrT0ZrANFSlR2IpY8ztsvanY="></script>
+    nonce="ntNl+sFPzYSG0uOPusOYx76VRBugX3S1iCjDHS96FDs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1312660/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               186
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1312660/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               186
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
