updated at: 2023-04-25 21:44, [VRchat想定]名前編集可能なペアリング(指輪/腕輪)[UnityPackage 付属] - Kanae&#39;s Garage - BOOTH

--- a/VRChat/71/1312571.html
+++ b/VRChat/71/1312571.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "250yk5E0h2+NMp0NxaX6yB/95I/5OrOjCq5s8Pr1RZE="></script>
+    "R4023tj48uOOqSqIjGDCmn2H/Fbxhpo5Ui/6wF7XiWc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat想定]名前編集可能なペアリング(指輪/腕輪)[UnityPackage 付属]","description":"VRChat内でかけがえのない人を見つけたとき、何か特別なものをあげたいと思ったことはないでしょうか？\nそんなあなたを少しでもお助けできれば……とペアルック可能な、自分たちだけのアクセサリをご用意しました。","url":"https://booth.pm/ja/items/1312571","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/a1a684d4-f6f7-445a-ae6e-becb249b10d5/i/1312571/bee3d61f-d474-4ce5-8cdb-4236c93ed6e1_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="250yk5E0h2+NMp0NxaX6yB/95I/5OrOjCq5s8Pr1RZE="></script>
+    nonce="R4023tj48uOOqSqIjGDCmn2H/Fbxhpo5Ui/6wF7XiWc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1312571/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1312571/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
