updated at: 2023-04-25 21:44, 眼帯 - 次乃工廠 - BOOTH

--- a/VRChat/32/1312432.html
+++ b/VRChat/32/1312432.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SvQ7hTpruFoWZvt/W5vZAbAdRIocOZkNJC64pfBSK0I="></script>
+    "ofV98JGME7J1XtUIoa1zTBWWG71bE1QEyJD4qBQP2n4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"眼帯","description":"昔のモデルになるので無料化しました\nテクスチャまで含めた初のモデルになります\n","url":"https://booth.pm/ja/items/1312432","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a1e9a7b7-2a8e-4a72-a1a7-bd22f089a53a/i/1312432/0d694ae2-296a-4614-bc00-aa9f08b75070_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SvQ7hTpruFoWZvt/W5vZAbAdRIocOZkNJC64pfBSK0I="></script>
+    nonce="ofV98JGME7J1XtUIoa1zTBWWG71bE1QEyJD4qBQP2n4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +138,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1312432/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1312432/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
