--- a/VRChat/57/1312257.html
+++ b/VRChat/57/1312257.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cESqZvoW+oPLaLfbwuVf+NrHJkUNgnZ70wm2sADAUek="></script>
+    "kVg3HzThrFA4GWaUYcMd1+dBaPkcMD53wWC5lH5aBTQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Vroid】水着＆濡れたTシャツセット","description":"内容\n・水着1種（body.png)\n・Tシャツ１種（one_piece.png)\n\n支援版\n…上記に加え、TOPで使用している背景イラストの追加\n（画像サイズ…1254*1771　72dpi）\n\n見本はこちら\nhttps://hub.vroid.com/characters/3090908678367339307/models/8042156816268165897\n\n※Tシャツから透けている肌は\n「肌テクスチャセット２（https://arin-vr-make.booth.pm/items/1295426）」に合わせてあります。\nその他のテクスチャに合わせるとイメージが変わり場合がありますのでご了承ください。\n\n購入前に利用規約をお読みください\nhttps://arinpv0v0.wixsite.com/makevroid/about\n\n※背景イラストを使用したものの場合、公開などは自由ですが無償の範囲でお願いします。","url":"https://booth.pm/ja/items/1312257","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"700"},"image":"https://booth.pximg.net/c/620x620/a52bc9c8-f676-4539-98be-e65fe87af193/i/1312257/9b14e96d-ec85-4a11-a606-802af77a3394_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cESqZvoW+oPLaLfbwuVf+NrHJkUNgnZ70wm2sADAUek="></script>
+    nonce="kVg3HzThrFA4GWaUYcMd1+dBaPkcMD53wWC5lH5aBTQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1312257/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               286
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1312257/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               286
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
