--- a/VRChat/75/1196175.html
+++ b/VRChat/75/1196175.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DLEbNnk72t7o3CyYbaVpKWqp/L1PmSugQviWbl6NWB0="></script>
+    "7EmEq9Iy4IfTK4/vKANCyC/pRg31A3tdNtmxuXnTqU8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ティラノサウルスの化石　3Dモデル","description":"・モデルの改造可能です。\n・総頂点83,227\n　ローポリ総頂点48,915\n・テクスチャ等は含まれておりません。\n\n\n【免責事項】\n\n・本データの利用において、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n【使用条件】\n\n・本データの改造利用には制限を設けませんが、データの再配布は禁止とします。\n　ゲーム等の用途としてデータが梱包されるのは問題ありません。\n・商用利用も問題ありません。\n・VRアバター、VTuber、ゲーム利用等の使用も問題ありません。\n・第三者の収益動画・配信等に映り込むことも問題ありません。\n\n【内容物】\n .fbx \n .fbx(ローポリ) \n .blend \n .pmx \n .mqo\n  のティラノサウルスの化石モデル計五つとblenderでのレンダリング画像です。\n\n\n【連絡先】\n何か連絡事項がありましたら。\n\nTwitter : はむくん(@hamukun7arupaka)\nhttps://twitter.com/hamukun7arupaka\n\nまでリプライかDMをお願いします。","url":"https://booth.pm/ja/items/1196175","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/240cbdc7-f16b-41af-9137-5d42b7e4cdae/i/1196175/314edb2a-0a6a-4daa-8303-80f65d2365ec_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DLEbNnk72t7o3CyYbaVpKWqp/L1PmSugQviWbl6NWB0="></script>
+    nonce="7EmEq9Iy4IfTK4/vKANCyC/pRg31A3tdNtmxuXnTqU8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1196175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              64
+                              65
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1196175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              64
+                              65
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
