--- a/VRChat/19/1312219.html
+++ b/VRChat/19/1312219.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0fnhRB/fj6TEi/qQwTdAqyHy9gNmqu4YUPFm1AxQ7Vc="></script>
+    "dEFCtyJZp5rSWUmhFxf+wicDj0+Ez7QJ2LBVkOf2qdk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハートの指輪","description":"1,0376ポリ、FBX形式\nVRChat等にどうぞ\n1回だけ譲渡してもいいです。\n色を変えられるようにマテリアルを3つに分けているものも同梱しています。\n3Dプリント用のデータも入れてみましたがテストはしていないので注意してください。\nそのままやデータを取り出せる形式での再配布、再販以外は自由にしてください。","url":"https://booth.pm/ja/items/1312219","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/65a07bda-dcd9-4c17-bb24-23ec1ab4f9db/i/1312219/d7ad7187-f4e5-42ac-9e66-89313d5398a5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0fnhRB/fj6TEi/qQwTdAqyHy9gNmqu4YUPFm1AxQ7Vc="></script>
+    nonce="dEFCtyJZp5rSWUmhFxf+wicDj0+Ez7QJ2LBVkOf2qdk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1312219/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1312219/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
