--- a/VRChat/97/1311797.html
+++ b/VRChat/97/1311797.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Oq5SUvaHLb2syvXSXA8RsSYhuh6TnYvmjUkoKRTy+1Y="></script>
+    "13GTnp9TRKeZL4ORK9BrQ/e+IkVbZFI1h44DQKqb8QY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『魔法少女まどか☆マギカ』ソウルジェム","description":"本商品は魔法少女まどか☆マギカに出てくる登場人物たちの5つのソウルジェムを含んでいます。\n \n好みによって変更することができるジェムで、FBXの形をしています このジェムはワールド製作のための小品や貴方のアバターのための装身具として使用することができます。 \n\nダウンロードするzipファイルには、インポートするためのUnity package fileが含まれており、追加のshaderは必要ありません。","url":"https://booth.pm/ja/items/1311797","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6344d16d-d329-4c8c-868d-1539711b7048/i/1311797/22fd57d8-1166-4274-ac46-15c7b84bb273_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Oq5SUvaHLb2syvXSXA8RsSYhuh6TnYvmjUkoKRTy+1Y="></script>
+    nonce="13GTnp9TRKeZL4ORK9BrQ/e+IkVbZFI1h44DQKqb8QY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1311797/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               673
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1311797/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               673
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
