updated at: 2023-04-25 21:46, iPod nano 7th - わやの物置 - BOOTH

--- a/VRChat/64/1310364.html
+++ b/VRChat/64/1310364.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OLLf1FLlayRxpk7RFwjZ6EkHr3p2eGVhJ+bDhsDO9NM="></script>
+    "QMrbXlhc672lqvQnNYcJ/Jq0BZll9oisr31WBwqYiWw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"iPod nano 7th","description":"最初に自分で作ったアバター(のつもりでしたが装飾品にも使えることを知った)モデリング品です。\n\nーーーーーーーーーー\n更新履歴\n\n2019/04/09 配布用release modelをアップロード\n\nーーーーーーーーーー\n\nこのモデルは基本的に何に使用してもらっても構いません。\nアバターとして使用することは可能です(一応)\nもちろん装飾品として身につけることも出来ます(2枚目の写真参考)\nただ作りが少々甘いため画像差し替え等の作業は個々でお願いすることになります。\n\nただし私が変に手を加えたところがあるかもしれないです。もしあった場合は申し訳ないです。(基本的に配布用に取り除いたつもりですが)\n\nーーーーーーーーーー\n製品のステータス\n\nポリゴン数：552\nメッシュ：1\nマテリアル：3\n配布形式：zip\n内容：readme、unitypack、fbx、texture、Materialなどを入れてあります。\n\nーーーーーーーーーー\n\n※この商品は黒胡椒様のご協力により完成しました。ありがとうございます。\n\nーーーーーーーーーー\nもし使用した場合は以下の条件を承認したことになります。\n・このモデルは基本使用は許容します。\n・改変もOKです。\n・モデルの用途は問いません\n・ただし「改変なしでの転載」は侵害行為として通報させていただきます。\n・改変モデルの再配布等は事前に一声お声掛けください(無いと思いますが...)\n\nわやのTwitter\n@wayamoti2015\n\nーーーーーーーーーー\nVersion1.2.ReleaseModel","url":"https://booth.pm/ja/items/1310364","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dc8505e6-9e5b-4a2a-a952-0e4e03651483/i/1310364/cebba09b-f7ab-404e-98e7-a5812279cbc7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OLLf1FLlayRxpk7RFwjZ6EkHr3p2eGVhJ+bDhsDO9NM="></script>
+    nonce="QMrbXlhc672lqvQnNYcJ/Jq0BZll9oisr31WBwqYiWw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1310364/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1310364/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
