updated at: 2023-04-25 21:47, VRChat レコード再生V2.0 - ぬこのおみせ - BOOTH

--- a/VRChat/66/1309266.html
+++ b/VRChat/66/1309266.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gI3j8Ubc7DVeLm4evMDm1B9Gl6dZv0QtwG3sneq6RJA="></script>
+    "pJj005sniat28q3FcguC8SWp4E/q8xhpOciB/hU6Zzo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat レコード再生V2.0","description":"概要\nvr自宅用に作った音楽再生装置\nhttps://twitter.com/hosikuzuwitch/status/1186578082838134784\n気が向いたらアップデート\n\n\n使い方\nレコード→ディスク の中にある\nAudio Source の Audio Clip に再生したい音楽を入れるだけ\n\n内容\n無料版\n再生用のSDK2のしくみだけ\n\n\n有料版\n本体付き\nSDK3-2020.07.16.10.33対応のうどん\n\nv1.0\n公開\n\nv1.1\nスプリングジョイントを使った位置調整機能追加\n\nv1.2\n 共通\nVRCアップデートでスプリングジョイントが動かなくなっていたのと\n音楽が再生されなくなっていたのを修正\n 無料版\nそれっぽい色を付けたキューブをモデルとして追加\n 有料版\n'Real Materials Vol.0'を外して単色マテリアルへ変更\n\nv2.0\nSDK3-2020.07.16.10.33への対応\n\n連絡先\nTwitter : @hosikuzuwitch\ndiscord : wizcat#2493\n","url":"https://booth.pm/ja/items/1309266","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/29e1e122-13d8-4681-a53c-d6a3da5745a8/i/1309266/326c299c-8003-4302-aa0d-b2d8664ffeb3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gI3j8Ubc7DVeLm4evMDm1B9Gl6dZv0QtwG3sneq6RJA="></script>
+    nonce="pJj005sniat28q3FcguC8SWp4E/q8xhpOciB/hU6Zzo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1309266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               108
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1309266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               108
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
