updated at: 2023-04-25 21:48, ロク君と神の3Dモデル（VRChat） - kami-god - BOOTH

--- a/VRChat/65/1307965.html
+++ b/VRChat/65/1307965.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kY74uFvJfN3t0Nq613lD3uDBsKQxedEvCS2pZprsJfE="></script>
+    "8iRGUr0vbdrnNRHxAomS8vjDXwXwLEp/kQLhDxRuZt0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ロク君と神の3Dモデル（VRChat）","description":"ちゃお～。神だよ。\n\n\nロク君と神を足して２で割った感じのフルスクラッチモデルだよ。とってもシンプルだよ。テクスチャは使ってないよ。だから色は自由に変えてね。\n\nCats Blender Plugin を使って、VRChat 用にセットアップしたけど、神は VRChat をやったことないから、実際にどうなるかは分からないよ。怖いなあ。\n\n\nロク君の異世界転生の様子を記録してる僕の YouTube チャンネルで、このモデルの元になった僕とロク君が見れるよ。\nhttps://www.youtube.com/channel/UCRoHcDmHrKp3PdNeIr6hnTA","url":"https://booth.pm/ja/items/1307965","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/319cad60-8015-4026-bd5d-4a8aad1c72d6/i/1307965/92adf19e-8190-4291-9a54-331018e78c80_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kY74uFvJfN3t0Nq613lD3uDBsKQxedEvCS2pZprsJfE="></script>
+    nonce="8iRGUr0vbdrnNRHxAomS8vjDXwXwLEp/kQLhDxRuZt0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1307965/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1307965/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
