updated at: 2023-04-25 21:49, 提供(無料版あり） - みんちゃん屋台 - BOOTH

--- a/VRChat/98/1307198.html
+++ b/VRChat/98/1307198.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rXY7pbVjQ7GwE+raEjm0fkMIfQ4gKlUb9zIZoRu/WWc="></script>
+    "iEL7nJGWw7K7dKtNZMotYcDetsLvZ45E/NA3msGQpsk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"提供(無料版あり）","description":"この番組は、ご覧のスポンサーの提供でお送りいたします。\n・GAFA\n","url":"https://booth.pm/ja/items/1307198","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"15000"},"image":"https://booth.pximg.net/c/620x620/90142dc5-94e2-429c-a719-4db89af8e2cc/i/1307198/65f72040-4fd8-4bc6-bb99-af557e0ca542_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rXY7pbVjQ7GwE+raEjm0fkMIfQ4gKlUb9zIZoRu/WWc="></script>
+    nonce="iEL7nJGWw7K7dKtNZMotYcDetsLvZ45E/NA3msGQpsk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1307198/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1307198/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
